feat(dev): update api for preferences page
